<resources>
    <string name="app_name">logeoapirest</string>
    <string name="logeo_usuario">Usuario</string>
    <string name="logeo_pass">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_ver">Ver</string>
    <string name="str_nombre">Nombre</string>
    <string name="str_apellido">Apellido</string>
    <string name="str_edad">Edad</string>
    <string name="str_password">Password</string>
</resources>
